tests/elab/ok/eq.pion.expected
enum Eq(T: Type, x: T, y: T): Type {
    Refl: Eq(T, x, x),
}

let false_eq_false: Eq(Bool, false, false) = Refl(Bool, false, #error);

====DIAGNOSTICS====
Error: Unable to infer expr of hole
   ╭─[tests/elab/ok/eq.pion:5:64]
   │
 5 │ let false_eq_false: Eq(Bool, false, false) = Refl(Bool, false, ?_);
   ·                                                                │ 
   ·                                                                ╰─ here
───╯
