tests/elab/ok/eq.pion
enum Eq(T: Type, x: T, y: T) {
    Refl: Eq(T, x, x)
}

let false_eq_false: Eq(Bool, false, false) = Refl(Bool, false, ?_);